frame/support/test/tests/benchmark_ui/bad_param_name.stderr
error[E0599]: no variant or associated item named `winton` found for enum `BenchmarkParameter` in the current scope
 --> tests/benchmark_ui/bad_param_name.rs:5:1
  |
5 | #[benchmarks]
  | ^^^^^^^^^^^^^ variant or associated item not found in `BenchmarkParameter`
  |
  = note: this error originates in the attribute macro `benchmarks` (in Nightly builds, run with -Z macro-backtrace for more info)
